[gd_scene load_steps=15 format=2]

[ext_resource path="res://Jerry.gd" type="Script" id=1]
[ext_resource path="res://laser 1.mp3" type="AudioStream" id=2]
[ext_resource path="res://flamethrower.mp3" type="AudioStream" id=3]
[ext_resource path="res://Jerry (Blue) 2.png" type="Texture" id=4]
[ext_resource path="res://Jerry (Green) 2.png" type="Texture" id=5]
[ext_resource path="res://Jerry (Purple).png" type="Texture" id=6]
[ext_resource path="res://Jerry (Purple) 2.png" type="Texture" id=7]
[ext_resource path="res://Jerry (Green).png" type="Texture" id=8]
[ext_resource path="res://Jerry (Red).png" type="Texture" id=9]
[ext_resource path="res://Jerry (Blue).png" type="Texture" id=10]
[ext_resource path="res://Jerry (Red) 2.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "Green",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "Red",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Purple",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 4 ) ],
"loop": true,
"name": "Blue",
"speed": 1.0
} ]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[node name="Jerry" type="StaticBody2D"]
position = Vector2( 375, 125 )
scale = Vector2( 0.3, 0.3 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Green"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 80, -360, 123.333, -340, 160, -300, 180, -260, 220, -220, 280, -120, 280, 100, 240, 180, 200, 220, 140, 250, 140, 340, 120, 360, -120, 360, -140, 340, -140, 250, -200, 220, -240, 180, -280, 100, -280, -120, -220, -220, -180, -260, -160, -300, -120, -340, -80, -360 )

[node name="Healthbar" type="ProgressBar" parent="."]
margin_left = -200.0
margin_top = -400.0
margin_right = -72.0
margin_bottom = -390.0
rect_scale = Vector2( 3, 3 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="Flamethrower" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Attack Cycle" type="Timer" parent="."]
wait_time = 2.0

[node name="Phase Cycle" type="Timer" parent="."]
wait_time = 15.0

[node name="Move Cycle" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Attack Cycle" to="." method="_on_Attack_Cycle_timeout"]
[connection signal="timeout" from="Phase Cycle" to="." method="_on_Phase_Cycle_timeout"]
[connection signal="timeout" from="Move Cycle" to="." method="_on_Move_Cycle_timeout"]
